--- a/D3 Scales/style.css
+++ b/D3 Scales/style.css
@@ -4,3 +4,11 @@
     background-color: #f7f7f7;
     margin: 25px auto;
 }
+
+.bar {
+    display: inline-block;
+    width: 100px;
+    height: 300px;
+    background-color: #7ED26D;
+    margin-right: 5px;
+}
