--- a/D3 Scales/BarChart/style.css
+++ b/D3 Scales/BarChart/style.css
@@ -15,5 +15,13 @@
 
 button {
     display: block;
-    margin: 0 auto;
+    margin: 5px auto;
+    padding: 10px;
+    width: 200px;
+    font-size: 20px;
+    background-color: #00709b;
+    color: #fff;
+    border: none;
+    outline: none;
+    cursor: pointer;
 }
