--- a/D3 Scales/BarChart/style.css
+++ b/D3 Scales/BarChart/style.css
@@ -1,4 +1,5 @@
 #chart {
+    position: relative;
     width: 800px;
     height: 400px;
     background-color: #f7f7f7;
@@ -24,4 +25,18 @@ button {
     border: none;
     outline: none;
     cursor: pointer;
+}
+
+#tooltip {
+    position: absolute;
+    width: 75px;
+    padding: 10px;
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #000;
+    pointer-events: none;
+    display: none;
+    font-family: sans-serif;
+    font-size: 16px;
+    font-weight: bold;
 }
